Update liquibase.properties for database connection settings and add to .gitignore

--- a/liquibase.properties
+++ b/liquibase.properties
@@ -1,5 +1,5 @@
-url=jdbc:postgresql://localhost:5432/icmslocal
-username=icmsdev
-password=dev@123
-changeLogFile=src/modules/events/liquibase/
+url=jdbc:postgresql://localhost:5432/postgres
+username=liquibase
+password=dinesh@123
+changeLogFile=src/liquibase/
 
